Ref #350: Replace hard-coded versions with maven properties